--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "exploratorium-sf-bay-water",
+  "nomadName": "SF Exploratorium bay water",
   "version": "1.0.0",
   "description": "San Francisco Bay Water sensor at the Exploratorium. Sourced from http://erddap.exploratorium.edu:8080/erddap",
   "main": "sensor.js",
